<resources>
    <string name="app_name">OmnimarkerZA</string>
    <string name="title_activity_maps">Map</string>
    <string name="access_token">pk.eyJ1Ijoic3V2YXNoaW4iLCJhIjoiY2twbGhrbzkxMDVscjJvbXVxNm9vNHk1diJ9._kklcq_wJylcPalomR3CNg</string>
    <string name="start_navigating">Start Navigating</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="go_to_picker_activity">Place Picker</string>
    <string name="selected_place_info">Selected location information:\n%1$s</string>
    <string name="polygon_circle_transformation_circle_radius">Radius: %1$s</string>
    <string name="polygon_circle_transformation_circle_distance_units">"Unit: "</string>
    <string name="polygon_circle_transformation_click_map_instruction">Tap the map to move the circle</string>
    <string name="start_navigation">Start navigation</string>
    <string name="search">Search</string>
    <string name="weather">WEATHER</string>
    <string name="name">Name</string>
    <string name="currency_converter">CURRENCY CONVERTER</string>
    <string name="amount_to_convert">Amount to convert</string>
    <string name="convert">Convert</string>
    <string name="result">Result</string>
    <string name="favourite_places">FAVOURITE PLACES</string>
    <string name="select_your_favourite_place_below">Select your favourite place below</string>
    <string name="remove_favourite">Remove Favourite</string>
    <string name="not_registered_as_yet_n">Not registered as yet ?\n</string>
    <string name="omnimarkerza">OmnimarkerZA</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="landmarks">LANDMARKS</string>
    <string name="safety_information">SAFETY INFORMATION</string>
    <string name="profile">PROFILE</string>
    <string name="settings">SETTINGS</string>
    <string name="default_metric">Default Metric</string>
    <string name="favourites">FAVOURITES</string>
    <string name="log_out">Log Out</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="change">Change</string>
    <string name="enter_your_new_password">Enter your new password:</string>
    <string name="enter_your_current_password">Enter your current password:</string>
    <string name="enter_your_new_email_address">Enter your new Email Address:</string>
    <string name="current_email_address">Current Email Address:</string>
    <string name="_0">0</string>
    <string name="general_safety_info">General Safety Info</string>
    <string name="important_phone_numbers">Important Phone Numbers</string>
    <string name="safety_information_details_for_user">Airport Safety:\n \n • Do not leave your luggage unattended.\n• Only ask for help and information from marked information stands.\n• Take notice of your surroundings and the marked emergency exits.\n\nAccommodation Safety: \n\n• Keep your room door locked at all times.\n• Never leave valuables unattended.\n• Do not open the door to unexpected visitors/staff.\n\nStreet Safety: \n\n• Do not carry large amounts of cash with you\n • Walk in a group when possible\n • Be aware of your surroundings</string>
    <string name="general_safety_information">General Safety Information</string>
    <string name="any_emergency_112">Any Emergency: 112</string>
    <string name="ambulance_or_fire_department_10177">Ambulance or Fire Department: 10177</string>
    <string name="nationwide_police_emergency_response_10111">Nationwide Police Emergency Response: 10111</string>
    <string name="important_numbers">Important Numbers</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="save_changes">Save Changes</string>
    <string name="help_guide_string">Start from the Main Menu\n\nHow to add a Favourite place:\nTap on the Landmarks icon. Tap on the marker button with the little plus sign, found top right under the search button. Tap the green check mark to add place to Favourites\n\nHow to View Favourites:\nTap on Landmarks icon. Tap on Search button. Your Favourites will be displayed in blue, tap one of your listed Favourite Places\n\nHow to Manage Favourites:\nTap on Favourites icon. Use drop down to select existing favourite. Remove the selected favourite by tapping on the Remove Button</string>
    <string name="help_guide">HELP</string>

    <!-- Within circle filter-->
    <string-array name="within_poi_filter_circle_distance_units_array">
        <item>Miles</item>
        <item>Kilometers</item>
    </string-array>
</resources>